examples/bad/ERROR_UNEXPECTED_TYPE_FOR_EXPRESSION/simple_ascription2_reconstruct.st
language core;
extend with #type-reconstruction, #type-ascriptions;

fn main(n : Nat) -> Nat {
  return 0 as Bool
}//ERROR_UNEXPECTED_TYPE_FOR_EXPRESSION
\n\n//ERROR_UNEXPECTED_TYPE_FOR_EXPRESSION
/n/n//ERROR_UNEXPECTED_TYPE_FOR_EXPRESSION
